# acroparallels2016

./: .gitignore  CMakeLists.txt  README.md
aivanov/badhash/: 8  hash.c
aivanov/fix_bugs/: lesson3_fix_bugs.cpp
aivanov/freebizzbuzz/: freebizzbuzz.c  freebizzbuzz.old.c
aivanov/log/: Makefile  log.h  logger.c  logger.h
aivanov/mapped_file/: .gitignore  CMakeLists.txt  FileRegion.cpp  FileRegion.h  HashTable.h  MappedFile.cpp  MappedFile.h  mapped_file.cpp  mapped_file.h
aivanov/mapped_file/log/: CMakeLists.txt  client.c  log.c  log.h  server.c
aivanov/mapped_file/test/: test.cpp  test.h  test1.c  test1.cpp  test2.c  test2.cpp  test2_huge.c
aivanov/par_mapped_file/: CMakeLists.txt
aneganov/bizzbuzz/: bizzbuzz.c
aneganov/fix_bugs/: lesson3_fix_bugs.cpp
aneganov/hellhash/: Makefile  hell.c  hellhash.h  main.c
aneganov/logger/: Makefile  log.c  log.h  test.c
aneganov/mapped_file/: Makefile  Makefile.inc  README.md  TODO  file
aneganov/mf_lib/: Makefile  Makefile.inc  README  README.md  TODO
aneganov/par_mapped_file/: Makefile  README.md
aneganov_exp/mapped_file/: Makefile  README.md  TODO
apotapov/Logger/: log.hpp  log.txt  main.cpp
apotapov/badhash/: hash.cpp  hash.h  type.h
apotapov/mapped_file/: CMakeLists.txt  CMakeLists.txt~  chunkmanager.c  chunkmanager.h  common_types.h  hash_table.c  lists.c  logger.c  logger.h  mapped_file.c  mapped_file.h
apotapov/mapped_file/test/: test.c  test.c~
apotapov/mf_project/: chunkManager.c  chunkManager.h  hash.c  hash.h  logger.c  logger.h  mappedfile.h  mf_proj.pro
apotapov/par_mapped_file/: CMakeLists.txt  CMakeLists.txt~  Makefile  chunkmanager.c  chunkmanager.h  common_types.h  hash_table.h  list.h  lists.c  logger.c  mapped_file.c  mapped_file.c~
apotapov/par_mapped_file/chunkmanager/: Makefile  chunkmanager.c  chunkmanager.h
apotapov/par_mapped_file/hash_table/: Makefile  hash_table.c  hash_table.h
apotapov/par_mapped_file/list/: Makefile  list.h  lists.c
apotapov/par_mapped_file/logger/: logger.c
apotapov/par_mapped_file/mapped_file/: Makefile  mapped_file.c  mapped_file.h
asnorkin/badHash/: BadHash.cpp  hashtable.hpp
asnorkin/mapped_file/: README.md  asnorkin_test.h  main.c  main.c~  mapped_file.c  mapped_file.h  mapped_file.pro  mapped_file.pro.user.18  mapped_file.pro.user.3.2-pre1  test.txt  typedefs.h
asnorkin/par_mapped_file/: main.c  makefile  mapped_file.pro  typedefs.h
azhadchenko/: hash_binary  tester.c
azhadchenko/mapped_file/: Makefile  chunk_manager.h  inverted_index.h  mmaped_file.c
azhadchenko/par_mapped_file/: chunk_manager.c  mmaped_file.c  (+1 more)
dokhlopkov/mapped_file/: CMakeLists.txt
dokhlopkov/mapped_file/sources/: chunks.c  chunks.h  mallocs.c  mallocs.h  mapped_file.c  mapped_file.h
dokhlopkov/mapped_file/sources/hashtable/: hashfunction.c  hashfunction.h  hashtable.c  hashtable.h  settings.h
dokhlopkov/mapped_file/sources/logger/: logger.c  logger.h
dokhlopkov/mapped_file/test/: clean.py  makefile  prepare.py  test_mf.c  test_performance.c  test_simple.c
dokhlopkov/mf/: CMakeLists.txt
dokhlopkov/mf/sources/: chunks.c  chunks.h  mallocs.c  mallocs.h  mapped_file.c  mapped_file.h
dokhlopkov/mf/sources/hashtable/: hashfunction.h  hashtable.c  hashtable.h
dokhlopkov/mf/sources/logger/: logger.c  logger.h
dokhlopkov/mf/tests/: makefile  makefiles.py  test_hashtable.c  test_mf.c
dvodopian/: brain_fuck_machine.c  hashfunction_bfm.c
dvodopian/file-mapper-project/: CMakeLists.txt  main.c
dvodopian/file-mapper-project/api_adapter/: CMakeLists.txt  api_adapter.c  api_adapter.h
dvodopian/file-mapper-project/file_mapper/: CMakeLists.txt  file_mapper.c  file_mapper.h  handles.h
dvodopian/file-mapper-project/tests/: CMakeLists.txt  test-api-adapter.cpp  test-internal-api.cpp
dvodopian/file-mapper-project/tests/lib/googletest-release-1.7.0/: CMakeLists.txt
dvodopian/file-mapper-project/tests/lib/googletest-release-1.7.0/scripts/: fuse_gtest_files.py
dvodopian/mapped_file/: CMakeLists.txt  clean.sh  deploy.sh  main.c  test.sh
dvodopian/mapped_file/chunk_manager/: CMakeLists.txt  chunk_manager.c  chunk_manager.h
dvodopian/mapped_file/file_mapper/: CMakeLists.txt  file_mapper.c
dvodopian/mapped_file/key_set/: CMakeLists.txt  key_set.h  ordered_list.c
dvodopian/mapped_file/mapped_file/: CMakeLists.txt  mapped_file.c
dvodopian/mapped_file/mapperonio/: CMakeLists.txt  mapped_file.c
dvodopian/mapped_file/sorted_list/: CMakeLists.txt  sorted_list.c  sorted_list.h
dvodopian/par_mapped_file/mapped_file/: CMakeLists.txt  mapped_file.c
enikitenko/logger/: .gitignore  CMakeLists.txt  g++_demangle.cpp  interfaces.h  linux.c  log.c  log.h  not_demangle.c  test.c  test.cpp
enikitenko/mapped_file/: .gitignore  CMakeLists.txt  hashtable.c  hashtable.h  mapped_file.c  mapped_file_internal.h
enikitenko/mapped_file/test/: CMakeLists.txt  performance1.c  performance2.c  test.c  tester.sh  tests.h
enikitenko/mappedfile/: .gitignore  CMakeLists.txt  mapped_file.c  test.c
ikrotov/: hashfunc.c  stdgrib.h  stdl1b.h
ikrotov/mapped_file/: CMakeLists.txt  ChunkManager.c  ChunkManager.h  Makefile  mapped_file.c
ikrotov/mapped_file/List/: list.c  list.h
ikrotov/mapped_file/chunk_manager/: chunk_manager.c  chunk_manager.h
ikrotov/mapped_file/hash_table/: hash_funcs.h  hash_table.c  hash_table.h  main.c
ikrotov/mapped_file/logger/: logger.c  logger.h
ikrotov/mapped_file/mapped_file/: mapped_file.c
ikrotov/mapped_file/mf_lib/: mapped_file.c
ikrotov/mapped_file/tester/: Makefile  main.c
imatveev/: my_lesson3_fix_bugs.cpp
include/: mapped_file.h
kshcherbatov/mapped_file/: CMakeLists.txt  CMakeLists.txt~  chunk_manager.cpp  chunk_manager.h  hash_table.cpp  hash_table.h  logger.h  main.cpp  mapped_file.cpp  mapped_file.cpp~
kshcherbatov/mapped_file/test/: Makefile~  psycho.c  psycho.c~
kshcherbatov/mapped_file/unittest/: makefile~
tester/: README  README.md  gpl.txt  out.txt  par_test_result.txt  par_test_results.ipynb  par_tester.sh  roundup  template.tplx  test_results.ipynb  test_results_dkopyrin.html  tester.sh  tester_config
(+552 files in other folders)
